tests/NormalTests/paczka1/fuzzy1/45693703.err
Error in line 19: kkhlr59ztLO A847 41,6
Error in line 23: kkhlr59ztLO S885 65,7
Error in line 22: eVMbch A725 19,4
Error in line 8: 7ivC A886 33,6
Error in line 36: S885 S885 1,5
Error in line 33: bIx3b A847 51,0
